commit translated contents

--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -111,6 +111,8 @@
           href: speech-synthesis-markup.md
         - name: Long Audio API を使用して音声を合成する
           href: long-audio-api.md
+        - name: リップシンクのために表情イベントを取得する
+          href: how-to-speech-synthesis-viseme.md
     - name: カスタマイズ
       items:
         - name: Custom Voice ポータル
