--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -14,8 +14,6 @@
           href: Quickstarts/create-publish-knowledge-base.md
         - name: クライアント ライブラリまたは REST API
           href: Quickstarts/quickstart-sdk.md
-    - name: REST API を使用してナレッジ ベースにクエリを実行する
-      href: Quickstarts/get-answer-from-knowledge-base-using-url-tool.md
 - name: チュートリアル
   items:
     - name: Power 仮想エージェントとの統合
@@ -84,6 +82,8 @@
           href: How-To/change-default-answer.md
     - name: ナレッジ ベースの照会
       items:
+        - name: REST API を使用したクエリ
+          href: Quickstarts/get-answer-from-knowledge-base-using-url-tool.md
         - name: GenerateAnswer API の使用
           href: How-To/metadata-generateanswer-usage.md
           displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters, GenerateAnswer, API, answer, RankerType, id, text, question, context, 200, 2xx, 400, 401, 403, 404'
