--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -204,7 +204,13 @@
       topicHref: /azure/vmware-cloudsimple/
     - name: Azure Portal のドキュメント
       tocHref: /azure/azure-portal/
-      topicHref: /azure/azure-portal/\
+      topicHref: /azure/azure-portal/
+    - name: Azure Portal のドキュメント
+      tocHref: /azure/virtual-machines/
+      topicHref: /azure/azure-portal/index
+    - name: Azure Portal のドキュメント
+      tocHref: /power-bi
+      topicHref: /azure/azure-portal/index
     - name: モノのインターネット (IoT)
       tocHref: /azure/iot-fundamentals/
       topicHref: /azure/iot-fundamentals/
